<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_introduction_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.mrra.IntroductionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <com.mrra.weight.VideoViewWithListener
                android:id="@+id/vv_introduction_video"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

            <TextView
                android:id="@+id/tv_introduction_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/vv_introduction_video"
                android:layout_alignBottom="@id/vv_introduction_video"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/mrra_introduction_tip"
                android:textColor="@color/white_soft"
                android:textSize="20sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:gravity="end"
            android:text="@string/mrra_introduction_title_0"
            android:textColor="?attr/titleTextColor"
            android:textSize="48sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_introduction_0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/mrra_introduction_0"
            android:textColor="?attr/itemTextColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:gravity="end"
            android:text="@string/mrra_introduction_title_1"
            android:textColor="?attr/titleTextColor"
            android:textSize="48sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_introduction_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/mrra_introduction_1"
            android:textColor="?attr/itemTextColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:gravity="end"
            android:text="@string/mrra_introduction_title_2"
            android:textColor="?attr/titleTextColor"
            android:textSize="48sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_introduction_2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/mrra_introduction_2"
            android:textColor="?attr/itemTextColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:gravity="end"
            android:text="@string/mrra_introduction_title_3"
            android:textColor="?attr/titleTextColor"
            android:textSize="48sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_introduction_3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/mrra_introduction_3"
            android:textColor="?attr/itemTextColor" />

    </LinearLayout>

</ScrollView>