<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnBackground"
    tools:context=".activity.main.MainActivity">

    <com.mrra.weight.ViewPagerForbidScroll
        android:id="@+id/vp_main_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_main_navigation"
        android:background="?attr/colorOnBackground" />

    <LinearLayout
        android:id="@+id/ll_main_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?attr/colorBackgroundFloating"
        android:elevation="4dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_main_healthy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="4dp"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_healthy" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/health"
                android:textColor="?attr/colorPrimary"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_main_mrra"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_mrra" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mrra"
                android:textColor="?attr/colorPrimary"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_main_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingBottom="4dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_me" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/me"
                android:textColor="?attr/colorPrimary"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <include
        android:id="@+id/weight_floating_connect"
        layout="@layout/weight_floating_connect" />

</RelativeLayout>